get user and valid body and handle exception
