# src/main/java/com/money/manager/infrastructure/dtos/UserResponseDto.java
@@ -1,0 +1,5 @@
+package com.money.manager.infrastructure.dtos;
+
+public record UserResponseDto(String username,String email) {
+    
+}
